--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
 
 <head>
 
@@ -226,14 +226,14 @@
                                 <h6 class="skill-title">HTML</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
-                                        <span class="counter">80</span>
+                                        <span class="counter">89</span>
                                     </div>
                                     %
                                 </div>
                             </div>
                             <div class="skill-bar">
                                 <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="80"></div>
+                                    <div class="bar progress-line" data-width="89"></div>
                                 </div>
                             </div>
                         </div> <!-- skill item -->
