--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="about-content mt-50">
                        
                             Eu sou o Veríssimo Conceição  tenho 25 anos de idade , estudante universitário frequênto o curso de <strong>Engenharia Informática</strong> 
-                           Desnvolverdor Web e Designer Gráfico tenho mais de 5 anos de experiência trabalhando em diversos projectos.
+                           Desenvolvedor Web e Designer Gráfico tenho mais de 5 anos de experiência trabalhando em diversos projectos.
                     </p>
                         <ul class="clearfix">
                             <li>
