--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="https://www.facebook.com/verissimo.caetano/"><i class="lni-facebook-filled"></i></a></li>
                                     <li><a href="https://www.instagram.com/verissimo.9/" target="_blank"><i class="lni-instagram-filled"></i></a></li>
                                     <li><a href="https://github.com/verissimo09?tab=repositories" target="_blank"><i class="lni-github-original" ></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/ver%C3%ADssimo-concei%C3%A7%C3%A3o-95b4a627b/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
